[package]
name = "get_attestation_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", features = ["ed25519"] }
serde_bytes = "0.11"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
rand = "0.8"
